testsuite/tests/properties/invalid_predicate_error/non_entity/test.lkt
from common import Example

@abstract
class FooNode implements Node[FooNode] {
    @predicate_error("msg: $n")
    fun pred(n: Example): Bool = false
}
